--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,27 @@
 root = true
 
 [*]
+indent_style = space
 charset = utf-8
 end_of_line = lf
+
+[*.adoc]
+max_line_length = off
+
+[*.java]
 indent_size = 4
-indent_style = space
 insert_final_newline = false
 max_line_length = 120
 tab_width = 4
 ij_continuation_indent_size = 8
+ij_java_wrap_long_lines = true
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = true
 ij_smart_tabs = false
 ij_visual_guides =
 ij_wrap_on_typing = false
+
+[*.yaml]
+indent_size = 2
+tab_width = 2
