--- a/.editorconfig
+++ b/.editorconfig
@@ -19,8 +19,7 @@ ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = true
 ij_smart_tabs = false
-ij_visual_guides =
-ij_wrap_on_typing = false
+ij_wrap_on_typing = true
 
 [*.yaml]
 indent_size = 2
